# RustedBigNote

./: .travis.yml  Cargo.toml  README.md
src/: main.rs  midi.rs  note.rs  staff.rs
