[package]
name = "rusted_big_note"
version = "0.1.0"
authors = ["Timofey <pianoist@ya.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
midir = "~0.7"

[target.'cfg(unix)'.dependencies]
midir = { version="~0.7", features=["jack"] }

[dependencies]
druid = { git = "https://github.com/linebender/druid.git", features=["svg"] }
tracing = { version = "0.1.22" }
